workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:51:24 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
22:51:25 **** Clean-only build of configuration Debug for project 235_lab06 ****
make clean 
rm -rf  ./Factory.o ./Node.o ./test.o  ./Factory.d ./Node.d ./test.d  235_lab06
 
22:51:25 **** Build of configuration Debug for project 235_lab06 ****
make all 
Building file: ../Factory.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Factory.d" -MT"Factory.d" -o "Factory.o" "../Factory.cpp"
Finished building: ../Factory.cpp
 
Building file: ../Node.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Node.d" -MT"Node.d" -o "Node.o" "../Node.cpp"
Finished building: ../Node.cpp
 
Building file: ../test.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test.d" -MT"test.d" -o "test.o" "../test.cpp"
../test.cpp:4:2: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << "Lab 06 test file----------------" << endl;
        ^~~~
        std::cout
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
../test.cpp:4:48: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
        cout << "Lab 06 test file----------------" << endl;
                                                      ^~~~
                                                      std::endl
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/ostream:1020:1: note: 'std::endl' declared here
endl(basic_ostream<_CharT, _Traits>& __os)
^
2 errors generated.
make: *** [test.o] Error 1
22:51:37 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
22:51:38 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
Building file: ../test.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test.d" -MT"test.d" -o "test.o" "../test.cpp"
Finished building: ../test.cpp
 
Building target: 235_lab06
Invoking: MacOS X C++ Linker
g++  -o "235_lab06"  ./Factory.o ./Node.o ./test.o   
Finished building target: 235_lab06
 
22:51:47 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:43:05 **** Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
18:43:05 **** Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:43:09 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:43:35 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
Building target: 235_lab05
Invoking: MacOS X C++ Linker
g++  -o "235_lab05"  ./Factory.o ./Pathfinder.o ./test.o   
Finished building target: 235_lab05
 
18:43:43 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
18:43:48 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
18:43:53 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:44:01 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:44:03 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:44:13 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
18:44:15 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
